--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2041,7 +2041,7 @@ pro.wizard.activation.password_length=G\u00fcltige Email und Password mit mindes
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.please_purchase=Bitte erwerben Sie {APPNAME} um fortzufahren.
 #orig#pro.wizard.activation.pro_activation={APPNAME} Activation
-pro.wizard.activation.pro_activation={APPNAME} Aktivierung
+pro.wizard.activation.pro_activation=Aktivierung
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=Passwort vergessen
 ##pro.wizard.activation.region=Region
