--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -2131,7 +2131,7 @@ pro.wizard.activation.password_length=Valid E-mail c\u00edm \u00e9s legal\u00e1b
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.please_purchase=A folytat\u00e1shoz {APPNAME} Pro licensz sz\u00fcks\u00e9ges.
 #orig#pro.wizard.activation.pro_activation={APPNAME} Activation
-pro.wizard.activation.pro_activation={APPNAME} aktiv\u00e1l\u00e1sa
+pro.wizard.activation.pro_activation=Aktiv\u00e1l\u00e1sa
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=Jelsz\u00f3 visszaszerz\u00e9se
 #orig#pro.wizard.activation.register_now=Sign up for an account
