--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2098,7 +2098,7 @@ pro.wizard.activation.password_length=Email valida e almeno 6 caratteri richiest
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.please_purchase=Acquistare {APPNAME} per riattivare.
 #orig#pro.wizard.activation.pro_activation={APPNAME} Activation
-pro.wizard.activation.pro_activation=Attivazione di {APPNAME}
+pro.wizard.activation.pro_activation=Attivazione
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=Recupera password
 pro.wizard.activation.region=Regione
