--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -418,7 +418,7 @@ pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.limit_hit=Only {1} GBs data and {0} folders allowed.
-pro.wizard.activation.pro_activation={APPNAME} Activation
+pro.wizard.activation.pro_activation=Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Sign up for an account
 pro.wizard.activation.register_now_trial=Please sign up for an free account to use {APPNAME}.
