--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2110,7 +2110,7 @@ pro.wizard.activation.password_length=\u6709\u6548\u7684\u7535\u5b50\u90ae\u4ef6
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.please_purchase=\u8bf7\u5347\u7ea7{APPNAME}\u5e76\u7ee7\u7eed\u3002
 #orig#pro.wizard.activation.pro_activation={APPNAME} Activation
-pro.wizard.activation.pro_activation={APPNAME} Pro\u6fc0\u6d3b
+pro.wizard.activation.pro_activation=\u6fc0\u6d3b
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=\u6062\u590d\u5bc6\u7801
 pro.wizard.activation.region=\u533a\u57df
