--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1985,7 +1985,7 @@ pro.udt_connections.description=UDT Verbindungen bevorzugen
 #orig#pro.udt_connections.name=Direct UDT connect
 pro.udt_connections.name=Direkte UDT Verbindungen
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=Aktiviere {APPNAME}
+pro.wizard.activation.activating=Aktiviere
 #orig#pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 pro.wizard.activation.agree_gtcs=Ich stimme den AGBs zu
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
@@ -2577,7 +2577,7 @@ wizard.choose_disk_location.target_dir=Zielverzeichnis
 #orig#wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.title=Speicherort ausw\u00e4hlen
 ##wizard.choose_disk_location.total_directory_size=Total size\: {0} Files\: {1}
-##wizard.choose_multi_disk_location.all_files=All typical
+wizard.choose_multi_disk_location.all_files=Alle typischen
 #orig#wizard.choose_multi_disk_location.select_additional=Additional directories
 wizard.choose_multi_disk_location.select_additional=Zus\u00e4tzliche Verzeichnisse
 #orig#wizard.choose_multi_disk_location.title=Select Directories
