--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2037,7 +2037,7 @@ pro.udt_connections.description=Habilitar preferencia por conecciones UDT sober 
 #orig#pro.udt_connections.name=Direct UDT connect
 pro.udt_connections.name=Conecci\u00f3n UDT directa
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=Activar {APPNAME}
+pro.wizard.activation.activating=Activar
 #orig#pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 pro.wizard.activation.agree_gtcs=De acuerdo con los t\u00e9rminos y condiciones generales
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
