--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1493,7 +1493,7 @@ pro.security.securitysettings=Param\u00e8tres de s\u00e9curit\u00e9
 ##pro.udt_connections.description=Enable to prefer UDT over TCP connections
 ##pro.udt_connections.name=Direct UDT connect
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=Activation de la version PowerFolder Pro
+pro.wizard.activation.activating=Activation
 ##pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.choose_key_file=Indiquer le fichier de licence
