--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -2077,7 +2077,7 @@ pro.udt_connections.description=UDT prefer\u00e1l\u00e1sa TCP kapcsolattal szemb
 #orig#pro.udt_connections.name=Direct UDT connect
 pro.udt_connections.name=K\u00f6zvetlen UDT kapcsolat
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating={APPNAME} Pro aktiv\u00e1l\u00e1sa
+pro.wizard.activation.activating=Aktiv\u00e1l\u00e1sa
 #orig#pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
 pro.wizard.activation.agree_gtcs=Elfogadom az \u00c1ltal\u00e1nos Szerz\u0151d\u00e9si Felt\u00e9teleket
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
