--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2043,7 +2043,7 @@ pro.udt_connections.description=Abilita connessioni UDT piuttosto che TCP
 #orig#pro.udt_connections.name=Direct UDT connect
 pro.udt_connections.name=Connessione Diretta UDT
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=Attivazione di {APPNAME} Pro in corso
+pro.wizard.activation.activating=Attivazione in corso
 #orig#pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 pro.wizard.activation.agree_gtcs=Accetto i Termini e le Condizioni Generali
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
