--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1490,7 +1490,7 @@ pro.security.securitysettings=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u8a2d\u5b9a
 ##pro.udt_connections.description=Enable to prefer UDT over TCP connections
 ##pro.udt_connections.name=Direct UDT connect
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=PowerFolder Pro \u3092\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30b7\u30e7\u30f3\u4e2d
+pro.wizard.activation.activating=\u3092\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30b7\u30e7\u30f3\u4e2d
 ##pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.choose_key_file=\u30e9\u30a4\u30bb\u30f3\u30b9\u30fb\u30ad\u30fc\u30fb\u30d5\u30a1\u30a4\u30eb\u306e\u9078\u629e
