--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1492,7 +1492,7 @@ pro.security.securitysettings=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u
 ##pro.udt_connections.description=Enable to prefer UDT over TCP connections
 ##pro.udt_connections.name=Direct UDT connect
 #orig#pro.wizard.activation.activating=Activating {APPNAME} Pro
-pro.wizard.activation.activating=\u0410\u043a\u0442\u0438\u0432\u0430\u0446\u0438\u044f PowerFolder Pro
+pro.wizard.activation.activating=\u0410\u043a\u0442\u0438\u0432\u0430\u0446\u0438\u044f
 ##pro.wizard.activation.agree_gtcs=I agree to the Terms and Conditions
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.choose_key_file=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0439\u043b \u043a\u043b\u044e\u0447\u0430
