Remove disused folder shortcut feature

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1109,8 +1109,6 @@ preferences.dialog.bind.any=\u0623\u064a\u0651\u0645\u0627
 preferences.dialog.bind.tooltip=\u0623\u062e\u062a\u0631 \u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0630\u064a \u064a\u062c\u0628 \u0623\u0646 \u064a\u0633\u062a\u062e\u062f\u0645\u0647 {APPNAME}
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=\u0648\u0635\u0641 \u0627\u0644\u062a\u0648\u0635\u064a\u0644
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=\u0625\u0646\u0634\u0627\u0621 \u0627\u062e\u062a\u0635\u0627\u0631 \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u0625\u0633\u062a\u062e\u062f\u0627\u0645 \u0645\u0632\u0627\u0645\u0646\u0629 \u062f\u0644\u062a\u0627
@@ -1196,7 +1194,7 @@ preferences.dialog.language=\u0627\u0644\u0644\u063a\u0629
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=\u0633\u0631\u0639\u0629 \u0625\u062a\u0635\u0627\u0644 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1267,7 +1265,7 @@ preferences.dialog.statusWaitDynDns=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\
 preferences.dialog.title=\u062e\u0635\u0627\u0626\u0635
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=\u0642\u064a\u062f \u0627\u0644\u0645\u0639\u0627\u0644\u062c\u0629...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
