--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1624,9 +1624,6 @@ preferences.dialog.bind.any=Alle
 preferences.dialog.bind.tooltip=W\u00e4hlt das Netzwerkinterface aus, das {APPNAME} benutzt
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Beschreibung
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Link auf dem Desktop anlegen
-##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Delta Sync
 #orig#preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -1719,7 +1716,7 @@ preferences.dialog.language=Sprache
 preferences.dialog.line_settings=Internet Geschwindigkeit
 #orig#preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.magnetic_frame=Fenster mit Haupt-Fenster bewegen
-#orig#preferences.dialog.main_on_top=Main frame stays on top of other windows
+#orig#preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.main_on_top=Haupt-Fenster im Vordergrund behalten
 #orig#preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.mass_delete_threshold=L\u00f6schschutz Schwelle
@@ -1810,7 +1807,7 @@ preferences.dialog.swarming.lan.tooltip=Mehrere Quellen f\u00fcr Downloads im LA
 preferences.dialog.title=Einstellungen
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=Arbeite...
-#orig#preferences.dialog.translucent_frame=Make main frame translucent
+#orig#preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.translucent_frame=Haupt-Fenster transparent darstellen
 #orig#preferences.dialog.translucent_text=Translucency
 preferences.dialog.translucent_text=Transparenz
