--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1153,7 +1153,6 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
-preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -1261,10 +1260,10 @@ dialog.directorychooser.new.exists=This directory already exists\n\n{0}
 dialog.directorychooser.new.problem=There was a problem creating the directory\n\n{0}
 dialog.directorychooser.use_classic=Classic Browser
 dialog.directorychooser.error=Error. Please use classic browser.
-preferences.dialog.translucent_frame=Make main frame translucent
+preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.min_to_sys_tray=Minimise to system tray
 preferences.dialog.ui_locked=Lock on start up
-preferences.dialog.main_on_top=Main frame stays on top of other windows
+preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.auto_expand=Auto expand Folders and Computers
 preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
