--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1662,8 +1662,6 @@ preferences.dialog.bind.any=Cualquiera
 preferences.dialog.bind.tooltip=Elija la direcci\u00f3n que {APPNAME} debe utilizar
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=descripci\u00f3n de la Interface
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Crear acceso directo en el Escritorio
 #orig#preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.default_archive_mode.text=Modo de archivo por omisi'on
 #orig#preferences.dialog.delta_sync=Delta sync
@@ -1772,7 +1770,7 @@ preferences.dialog.language=Idioma
 preferences.dialog.line_settings=Velocidad de Conexi\u00f3n a Internet
 #orig#preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.magnetic_frame=Mover ventana hija con ventana principal
-#orig#preferences.dialog.main_on_top=Main frame stays on top of other windows
+#orig#preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.main_on_top=Marco principal por encima de otras ventanas
 #orig#preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.mass_delete_threshold=Limite para borrar en masa
@@ -1866,7 +1864,7 @@ preferences.dialog.swarming.lan.tooltip=Habilitar descargas de origen m\u00falti
 preferences.dialog.title=Preferencias
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=procesando...
-#orig#preferences.dialog.translucent_frame=Make main frame translucent
+#orig#preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.translucent_frame=Haver transl\u00facido el marco principal
 #orig#preferences.dialog.translucent_text=Translucency
 preferences.dialog.translucent_text=Translucente
