--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1187,8 +1187,6 @@ preferences.dialog.bind.any=Toute
 preferences.dialog.bind.tooltip=S\u00e9lectionner l'adresse utilis\u00e9e par PowerFolder
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Description de l'interface
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Raccourcis sur le bureau Windows
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Utiliser la synchronisation diff\u00e9rentielle
@@ -1279,7 +1277,7 @@ preferences.dialog.language=Langue
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=Vitesse de connexion \u00e0 Internet
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1360,7 +1358,7 @@ preferences.dialog.swarming.lan.tooltip=Active le t\u00e9l\u00e9chargement depui
 preferences.dialog.title=Pr\u00e9f\u00e9rences
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=Execution...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
