--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1662,8 +1662,6 @@ preferences.dialog.bind.any=Qualunque
 preferences.dialog.bind.tooltip=Seleziona l'indirizzo che {APPNAME} dovrebbe usare
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Descrizione dell'interfaccia
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Crea un collegamento sul desktop
 #orig#preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.default_archive_mode.text=Modalit\u00e0 di archiviazione di default
 #orig#preferences.dialog.delta_sync=Delta sync
@@ -1772,7 +1770,7 @@ preferences.dialog.language=Linguaggio
 preferences.dialog.line_settings=Velocit\u00e0 di connessione Internet
 #orig#preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.magnetic_frame=Muovi finestre figlie asieme alla finestra principale
-#orig#preferences.dialog.main_on_top=Main frame stays on top of other windows
+#orig#preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.main_on_top=Il frame principale rimane sopra le altre finestre
 #orig#preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.mass_delete_threshold=Cancella la soglia
@@ -1866,7 +1864,7 @@ preferences.dialog.swarming.lan.tooltip=Abilita downloads da sorgenti multiple n
 preferences.dialog.title=Preferenze
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=elaborazione in corso...
-#orig#preferences.dialog.translucent_frame=Make main frame translucent
+#orig#preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.translucent_frame=Rendi il mainframe translucente
 #orig#preferences.dialog.translucent_text=Translucency
 preferences.dialog.translucent_text=Translucenza
