--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1186,8 +1186,6 @@ preferences.dialog.bind.any=\u3059\u3079\u3066
 preferences.dialog.bind.tooltip=PowerFolder \u3067\u4f7f\u7528\u3059\u308b\u30a2\u30c9\u30ec\u30b9\u306e\u9078\u629e
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=\u30a4\u30f3\u30bf\u30fc\u30d5\u30a7\u30a4\u30b9\u306e\u8aac\u660e
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u306e\u4f5c\u6210
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u30c7\u30eb\u30bf\u540c\u671f\u3092\u4f7f\u7528
@@ -1278,7 +1276,7 @@ preferences.dialog.language=\u8a00\u8a9e
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u63a5\u7d9a\u56de\u7dda\u901f\u5ea6
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1359,7 +1357,7 @@ preferences.dialog.swarming.lan.tooltip=LAN \u5185\u306e\u8907\u6570\u30bd\u30fc
 preferences.dialog.title=\u8a2d\u5b9a
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=\u51e6\u7406\u4e2d...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
