--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1124,8 +1124,6 @@ preferences.dialog.bind.any=Automatycznie
 preferences.dialog.bind.tooltip=Wybierz adres, kt\u00f3rego PowerFolder powinien u\u017cy\u0107
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Opis interfejsu
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Stw\u00f3rz skr\u00f3t na pulpicie
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=U\u017cywaj synchronizacji delta
@@ -1213,7 +1211,7 @@ preferences.dialog.language=J\u0119zyk
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=Pr\u0119dko\u015b\u0107 po\u0142\u0105czenia z Internetem
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1288,7 +1286,7 @@ preferences.dialog.statusWaitDynDns=Prosz\u0119 czeka\u0107, DynDns {0} jest w t
 preferences.dialog.title=Ustawienia
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=przetwarzanie...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
