--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1140,8 +1140,6 @@ preferences.dialog.bind.any=Qualquer
 preferences.dialog.bind.tooltip=Selecione o endere\u00e7o que o PowerFolder dever\u00e1 usar
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Descri\u00e7\u00e3o da Interface
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Criar atalhos na \u00e1rea de trabalho
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a
@@ -1231,7 +1229,7 @@ preferences.dialog.language=Linguagem
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=Velocidade da conex\u00e3o de Internet
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1306,7 +1304,7 @@ preferences.dialog.statusWaitDynDns=Por favor aguarde, DynDns {0} est\u00e1 send
 preferences.dialog.title=Prefer\u00eancias
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=processando...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
