--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1674,8 +1674,6 @@ preferences.dialog.bind.any=\u5168\u90e8
 preferences.dialog.bind.tooltip=\u9009\u62e9{APPNAME}\u4f7f\u7528\u7684IP\u5730\u5740
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 #orig#preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.default_archive_mode.text=\u9ed8\u8ba4\u5b58\u6863\u6a21\u5f0f
 #orig#preferences.dialog.delta_sync=Delta sync
@@ -1784,7 +1782,7 @@ preferences.dialog.language=\u8bed\u8a00
 preferences.dialog.line_settings=\u4e92\u8054\u7f51\u4f20\u8f93\u901f\u7387
 #orig#preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.magnetic_frame=\u5b50\u7a97\u53e3\u548c\u4e3b\u7a97\u53e3\u4e00\u8d77\u79fb\u52a8
-#orig#preferences.dialog.main_on_top=Main frame stays on top of other windows
+#orig#preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.main_on_top=\u4e3b\u7a97\u53e3\u505c\u7559\u5728\u5176\u5b83\u7a97\u53e3\u7684\u4e0a\u65b9
 #orig#preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.mass_delete_threshold=\u5927\u91cf\u5220\u9664\u63d0\u793a\u7684\u6700\u4f4e\u6bd4\u4f8b
@@ -1878,7 +1876,7 @@ preferences.dialog.swarming.lan.tooltip=\u4ece\u5c40\u57df\u7f51\u7684\u591a\u4e
 preferences.dialog.title=\u8bbe\u7f6e
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=\u5904\u7406\u4e2d\u2026\u2026
-#orig#preferences.dialog.translucent_frame=Make main frame translucent
+#orig#preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.translucent_frame=\u4e3b\u7a97\u53e3\u534a\u900f\u660e\u6548\u679c
 #orig#preferences.dialog.translucent_text=Translucency
 preferences.dialog.translucent_text=\u534a\u900f\u660e
