--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -1699,9 +1699,6 @@ preferences.dialog.bind.any=B\u00e1rmely
 preferences.dialog.bind.tooltip=Az alkalmaz\u00e1s \u00e1ltal haszn\u00e1land\u00f3 c\u00edm kiv\u00e1laszt\u00e1sa
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Interface le\u00edr\u00e1sa
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Asztali parancsikonok l\u00e9trehoz\u00e1sa
-#orig#preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.default_archive_mode.text=Alap\u00e9rtelmezett archiv\u00e1l\u00e1si m\u00f3d
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=Delta szinkroniz\u00e1l\u00e1s
@@ -1813,7 +1810,7 @@ preferences.dialog.language=Nyelv
 preferences.dialog.line_settings=Internet sebess\u00e9ge
 #orig#preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.magnetic_frame=Kapcsol\u00f3d\u00f3 ablakok mozgat\u00e1sa a f\u0151 ablakkal
-#orig#preferences.dialog.main_on_top=Main frame stays on top of other windows
+#orig#preferences.dialog.main_on_top=Main window stays on top of other windows
 preferences.dialog.main_on_top=A f\u0151 keret a t\u00f6bbi ablak felett marad
 #orig#preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.mass_delete_threshold=T\u00f6meges t\u00f6rl\u00e9s k\u00fcsz\u00f6b
@@ -1907,7 +1904,7 @@ preferences.dialog.swarming.lan.tooltip=T\u00f6bb forr\u00e1sb\u00f3l t\u00f6rt\
 preferences.dialog.title=Be\u00e1ll\u00edt\u00e1sok
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=feldolgoz\u00e1s...
-#orig#preferences.dialog.translucent_frame=Make main frame translucent
+#orig#preferences.dialog.translucent_frame=Make main window translucent
 preferences.dialog.translucent_frame=F\u0151 keret \u00e1tl\u00e1tsz\u00f3v\u00e1 t\u00e9tele
 #orig#preferences.dialog.translucent_text=Translucency
 preferences.dialog.translucent_text=\u00c1tl\u00e1tsz\u00f3s\u00e1g
