--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1095,8 +1095,6 @@ preferences.dialog.bind.any=Alle
 preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruiken
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Interface beschrijving
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Maak bureaublad snelkoppelingen
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 ##preferences.dialog.delta_sync=Delta sync
 ##preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -1180,7 +1178,7 @@ preferences.dialog.language=Taal
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=Internet verbindings snelheid
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1252,7 +1250,7 @@ preferences.dialog.statusWaitDynDns=S.V.P. even wachten, DynDns {0} wordt gecont
 preferences.dialog.title=Instellingen
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=verwerken...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
