--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1185,8 +1185,6 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0430\u0434\u0440\u0435\u0441 \u0434\u043b\u044f \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043d\u0438\u044f PowerFolder
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0430\u0434\u0440\u0435\u0441\u0430
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=\u0420\u0430\u0437\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0434\u0435\u043b\u044c\u0442\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044e
@@ -1277,7 +1275,7 @@ preferences.dialog.language=\u042f\u0437\u044b\u043a
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=\u0421\u043a\u043e\u0440\u043e\u0441\u0442\u044c \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f \u0438\u043d\u0442\u0435\u0440\u043d\u0435\u0442\u0430
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1358,7 +1356,7 @@ preferences.dialog.swarming.lan.tooltip=\u0412\u043a\u043b\u044e\u0447\u0438\u04
 preferences.dialog.title=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=\u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
