--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1083,8 +1083,6 @@ preferences.dialog.bind.any=Alla
 preferences.dialog.bind.tooltip=V\u00e4lj adressen PowerFolder skall anv\u00e4nda
 #orig#preferences.dialog.bindDescr=Interface description
 preferences.dialog.bindDescr=Gr\u00e4nssnittbeskrivning
-#orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.create_desktop_shortcuts=Skapa genv\u00e4g p\u00e5 skrivbordet
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 ##preferences.dialog.delta_sync=Delta sync
 ##preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -1168,7 +1166,7 @@ preferences.dialog.language=Spr\u00e5k
 #orig#preferences.dialog.line_settings=Internet speed
 preferences.dialog.line_settings=Internet bandbredd
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
@@ -1239,7 +1237,7 @@ preferences.dialog.statusWaitDynDns=Var v\u00e4nlig v\u00e4nta, DynDNS {0} kontr
 preferences.dialog.title=Inst\u00e4llningar
 #orig#preferences.dialog.titleProcessing=processing...
 preferences.dialog.titleProcessing=Arbetar...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
