--- a/src/etc/Translation_tr.properties
+++ b/src/etc/Translation_tr.properties
@@ -909,7 +909,6 @@
 ##preferences.dialog.bind.any=Any
 ##preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
 ##preferences.dialog.bindDescr=Interface description
-##preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 ##preferences.dialog.delta_sync=Delta sync
 ##preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -966,7 +965,7 @@
 ##preferences.dialog.language=Language
 ##preferences.dialog.line_settings=Internet speed
 ##preferences.dialog.magnetic_frame=Move child windows with main window
-##preferences.dialog.main_on_top=Main frame stays on top of other windows
+##preferences.dialog.main_on_top=Main window stays on top of other windows
 ##preferences.dialog.mass_delete_threshold=Mass delete threshold
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 ##preferences.dialog.network.title=Network
@@ -1013,7 +1012,7 @@
 ##preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources on the LAN
 ##preferences.dialog.title=Preferences
 ##preferences.dialog.titleProcessing=processing...
-##preferences.dialog.translucent_frame=Make main frame translucent
+##preferences.dialog.translucent_frame=Make main window translucent
 ##preferences.dialog.translucent_text=Translucency
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.ui_locked=Lock on startup
