Change connection notification to work on server connection, fixes #2325

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2228,11 +2228,11 @@ status_bar.poor_quality_warning.title=Schlechte Verbindungsqualit\u00e4t
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=Suche nach \u00c4nderungen deaktivieren
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected={APPNAME} ist verbunden
+tray_icon_manager.status_change.connected={APPNAME} ist verbunden
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled={APPNAME} ist abgeschaltet
+tray_icon_manager.status_change.disabled={APPNAME} ist abgeschaltet
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=Verbindungsstatus
+tray_icon_manager.status_change.title=Verbindungsstatus
 
 #orig#status_tab.computers=Computer(s)
 status_tab.computers=Computer
