--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1369,9 +1369,9 @@ status.port.tip=Connection port number
 status.port.text=Port: {0}
 status.chat_pending=There are chat messages waiting
 
-status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.title=Connection Status
+tray_icon_manager.status_change.connected={APPNAME} is connected
+tray_icon_manager.status_change.disabled={APPNAME} is disabled
+tray_icon_manager.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
