--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2286,11 +2286,11 @@ status_bar.poor_quality_warning.title=Calidad de conneci\u00f3n deficiente
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=Deshabilitar busqueda de cambios en carpeta
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected={APPNAME} conectado
+tray_icon_manager.status_change.connected={APPNAME} conectado
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled=El {APPNAME} desactivado
+tray_icon_manager.status_change.disabled=El {APPNAME} desactivado
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=Estado de Conecci\u00f3n
+tray_icon_manager.status_change.title=Estado de Conecci\u00f3n
 
 ##status_tab.computers=Computer(s)
 ##status_tab.files_available=File(s) available
