--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1669,11 +1669,11 @@ settings_tab.download_script=Script apr\u00e8s le t\u00e9l\u00e9chargement
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected=PowerFolder est connect\u00e9
+tray_icon_manager.status_change.connected=PowerFolder est connect\u00e9
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled=PowerFolder est inactif
+tray_icon_manager.status_change.disabled=PowerFolder est inactif
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=Etat de la connexion
+tray_icon_manager.status_change.title=Etat de la connexion
 
 ##status_tab.computers=Computer(s)
 ##status_tab.files_available=File(s) available
