--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -2324,11 +2324,11 @@ status_bar.poor_quality_warning.title=Gyenge kapcsolat
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=Mappav\u00e1ltoz\u00e1sok figyel\u00e9s\u00e9nek kikapcsol\u00e1sa
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected={APPNAME} kapcsol\u00f3dva
+tray_icon_manager.status_change.connected={APPNAME} kapcsol\u00f3dva
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled={APPNAME} ki van kapcsolva
+tray_icon_manager.status_change.disabled={APPNAME} ki van kapcsolva
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=Kapcsolat \u00e1llapota
+tray_icon_manager.status_change.title=Kapcsolat \u00e1llapota
 
 #orig#sync_icon_button_mini.tip=Synchronize folder now
 sync_icon_button_mini.tip=\u00d6sszes mappa szinkroniz\u00e1l\u00e1sa most
