--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2291,11 +2291,11 @@ status_bar.poor_quality_warning.title=Scarsa qualit\u00e0 di connessione
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=Disabilita scansione cartelle
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected={APPNAME} \u00e8 connesso
+tray_icon_manager.status_change.connected={APPNAME} \u00e8 connesso
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled={APPNAME} \u00e8 disabilitato
+tray_icon_manager.status_change.disabled={APPNAME} \u00e8 disabilitato
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=Stato di connessione
+tray_icon_manager.status_change.title=Stato di connessione
 
 #orig#status_tab.computers=Computer(s)
 status_tab.computers=Computer(s)
