--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1665,11 +1665,11 @@ send_invitation.placetostore=\u62db\u5f85\u72b6\u3092\u4fdd\u5b58\u3059\u308b\u5
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected=PowerFolder \u306f\u63a5\u7d9a\u72b6\u614b\u3067\u3059
+tray_icon_manager.status_change.connected=PowerFolder \u306f\u63a5\u7d9a\u72b6\u614b\u3067\u3059
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled=PowerFolder \u306f\u7121\u52b9\u72b6\u614b\u3067\u3059
+tray_icon_manager.status_change.disabled=PowerFolder \u306f\u7121\u52b9\u72b6\u614b\u3067\u3059
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=\u63a5\u7d9a\u30b9\u30c6\u30fc\u30bf\u30b9
+tray_icon_manager.status_change.title=\u63a5\u7d9a\u30b9\u30c6\u30fc\u30bf\u30b9
 
 ##status_tab.computers=Computer(s)
 ##status_tab.files_available=File(s) available
