--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1667,11 +1667,11 @@ send_invitation.placetostore=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected=PowerFolder \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d
+tray_icon_manager.status_change.connected=PowerFolder \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled=PowerFolder \u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
+tray_icon_manager.status_change.disabled=PowerFolder \u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f
+tray_icon_manager.status_change.title=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f
 
 ##status_tab.computers=Computer(s)
 ##status_tab.files_available=File(s) available
