--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2305,11 +2305,11 @@ status_bar.poor_quality_warning.title=\u8fde\u63a5\u8d28\u91cf\u5dee
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=\u7981\u7528\u6587\u4ef6\u5939\u66f4\u6539\u626b\u63cf
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected={APPNAME}\u5df2\u7ecf\u8fde\u63a5
+tray_icon_manager.status_change.connected={APPNAME}\u5df2\u7ecf\u8fde\u63a5
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled={APPNAME}\u5df2\u7ecf\u7981\u7528
+tray_icon_manager.status_change.disabled={APPNAME}\u5df2\u7ecf\u7981\u7528
 #orig#status_bar.status_change.title=Connection Status
-status_bar.status_change.title=\u8fde\u63a5\u72b6\u6001
+tray_icon_manager.status_change.title=\u8fde\u63a5\u72b6\u6001
 
 #orig#status_tab.computers=Computer(s)
 status_tab.computers=\u8ba1\u7b97\u673a
