Refs #2308: Added translations for core web templates

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2815,3 +2815,59 @@ wizard.what_to_do.synchronized_folder.tip=Mit dieser Option synchronisieren Sie 
 wizard.what_to_do.title=Was m\u00f6chten Sie tun?
 #orig#wizard.worker.problem=Problem occurred
 wizard.worker.problem=Problem aufgetreten
+
+#################################
+# Translations for webinterface #
+#################################
+
+# login.vm
+#orig#web.core.login=Login
+web.core.login=Anmelden
+#orig#web.core.sign_up=Sign up for a new account
+web.core.sign_up=Neues Benutzerkonto anlegen
+#orig#web.core.recover_password=Recover password
+web.core.recover_password=Passwort zur\u00fccksetzen
+#orig#web.core.recover_password.alert=Please enter your Email and press 'Recover password' again
+web.core.recover_password.alert=Bitte geben Sie ihre Email ein und klicken Sie auf 'Passwort zur\u00fccksetzen'
+#orig#web.core.keep_logged_in=Keep me logged in
+web.core.keep_logged_in=Angemeldet bleiben
+
+# register.vm
+#orig#web.core.already_registered=Already registered? Login here.
+web.core.already_registered=Bereits registriert? Hier anmelden.
+#orig#web.core.download_client=Download the client app
+web.core.download_client=Client runterladen
+#orig#web.core.confirm=Confirm
+web.core.confirm=Best\u00e4tigen
+#orig#web.core.register=Register
+web.core.register=Registrieren
+
+# activation.vm
+#orig#web.core.activate=Activate
+web.core.activate=Aktivieren
+#orig#web.core.purchase_server=Purchase server license
+web.core.purchase_server_license=Server Lizenzen kaufen
+#orig#web.core.demo_license=Get a demo license
+web.core.demo_license=Demo Lizenz bestellen
+
+# loginshare.vm
+#orig#web.core.invalid_user_pass=Invalid username or password
+web.core.invalid_user_pass=Ung\u00fcltiger Benutzername oder Passwort
+
+# login_snippet_form.vm
+#orig#web.core.forgotten=Forgot?
+web.core.forgotten=Vergessen?
+
+# download_client.vm
+#orig#web.core.app_starts_soon=The windows app starts in a few second
+web.core.app_starts_soon=Das Programm started in wenigen Sekunden
+#orig#web.core.start_via_webstart=Start via Java WebStart (Mac, Linux) instead
+web.core.start_via_webstart=Via Java WebStart (Mac, Linux) starten
+#orig#web.core.download_linux=Download for Linux (WebStart)
+web.core.download_linux=Download f\u00fcr Linux (WebStart)
+#orig#web.core.download_mac=Download for Mac
+web.core.download_mac=Download f\u00fcr Mac
+#orig#web.core.download_windows=Download for Windows
+web.core.download_windows=Download f\u00fcr Windows
+#orig#web.core.mobile_app=Mobile app / Server address:
+web.core.mobile_app=Mobile App / Server Adresse:
