--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2497,7 +2497,7 @@ user.dir.links=Links
 #orig#user.dir.music=Music
 user.dir.music=Musik
 #orig#user.dir.my_documents=My Documents
-user.dir.my_documents=Eigenen Dokumente
+user.dir.my_documents=Eigene Dokumente
 #orig#user.dir.my_music=My Music
 user.dir.my_music=Meine Musik
 #orig#user.dir.my_pictures=My Pictures
